--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,7 +2,7 @@ body
 {
     color: blueviolet;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
 }
