--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,6 @@
 body
 {
-    color: blueviolet;
+    color: red;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
@@ -9,7 +9,7 @@ body
 
 #cabecera
 {
-    background: #33A;
+    background: green;
     box-shadow: 0px 5px 30px 0px rgba(0,0,0, 0.75);
     color: white;
     font-weight: bold;
