--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,7 +9,7 @@ body
 
 #cabecera
 {
-    background: #33A;
+    background: yellow;
     box-shadow: 0px 5px 30px 0px rgba(0,0,0, 0.75);
     color: white;
     font-weight: bold;
